// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`microsoft-foundry - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use this skill to work with Microsoft Foundry (Azure AI Foundry): deploy AI models from catalog, build RAG applications with knowledge indexes, create and evaluate AI agents, manage RBAC permissions and role assignments, manage quotas and capacity, create Foundry resources.
USE FOR: Microsoft Foundry, AI Foundry, deploy model, deploy GPT, deploy OpenAI model, model catalog, RAG, knowledge index, create agent, evaluate agent, agent monitoring, create Foundry project, new Foundry project, set up Foundry, onboard to Foundry, provision Foundry infrastructure, create Foundry resource, create AI Services, multi-service resource, AIServices kind, register resource provider, enable Cognitive Services, setup AI Services account, create resource group for Foundry, RBAC, role assignment, managed identity, service principal, permissions, quota, capacity, TPM, PTU, deployment failure, QuotaExceeded, InsufficientQuota, DeploymentLimitReached, check quota, view quota, monitor quota, quota increase, deploy model without project, first time model deployment, deploy model to new project, Foundry deployment, GPT deployment, model deployment.
DO NOT USE FOR: Azure Functions (use azure-functions), App Service (use azure-create-app), generic Azure resource creation (use azure-create-app), AI Search queries (use azure-ai), speech-to-text (use azure-ai), OCR (use azure-ai).
",
  "extractedKeywords": [
    "account",
    "agent",
    "agents",
    "aiservices",
    "applications",
    "assignment",
    "assignments",
    "authentication",
    "azure",
    "azure-ai",
    "azure-create-app",
    "azure-functions",
    "build",
    "capacity",
    "catalog",
    "check",
    "cli",
    "cognitive",
    "create",
    "creation",
    "deploy",
    "deployment",
    "deploymentlimitreached",
    "diagnostic",
    "enable",
    "entra",
    "evaluate",
    "failure",
    "first",
    "foundry",
    "from",
    "function",
    "functions",
    "generic",
    "group",
    "identity",
    "increase",
    "index",
    "indexes",
    "infrastructure",
    "insufficientquota",
    "kind",
    "knowledge",
    "manage",
    "managed",
    "mcp",
    "microsoft",
    "model",
    "models",
    "monitor",
    "monitoring",
    "multi-service",
    "onboard",
    "openai",
    "permissions",
    "principal",
    "project",
    "provider",
    "provision",
    "queries",
    "quota",
    "quotaexceeded",
    "quotas",
    "rbac",
    "register",
    "resource",
    "resources",
    "role",
    "search",
    "service",
    "services",
    "setup",
    "skill",
    "speech-to-text",
    "this",
    "time",
    "view",
    "with",
    "without",
    "work",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`microsoft-foundry - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "account",
  "agent",
  "agents",
  "aiservices",
  "applications",
  "assignment",
  "assignments",
  "authentication",
  "azure",
  "azure-ai",
  "azure-create-app",
  "azure-functions",
  "build",
  "capacity",
  "catalog",
  "check",
  "cli",
  "cognitive",
  "create",
  "creation",
  "deploy",
  "deployment",
  "deploymentlimitreached",
  "diagnostic",
  "enable",
  "entra",
  "evaluate",
  "failure",
  "first",
  "foundry",
  "from",
  "function",
  "functions",
  "generic",
  "group",
  "identity",
  "increase",
  "index",
  "indexes",
  "infrastructure",
  "insufficientquota",
  "kind",
  "knowledge",
  "manage",
  "managed",
  "mcp",
  "microsoft",
  "model",
  "models",
  "monitor",
  "monitoring",
  "multi-service",
  "onboard",
  "openai",
  "permissions",
  "principal",
  "project",
  "provider",
  "provision",
  "queries",
  "quota",
  "quotaexceeded",
  "quotas",
  "rbac",
  "register",
  "resource",
  "resources",
  "role",
  "search",
  "service",
  "services",
  "setup",
  "skill",
  "speech-to-text",
  "this",
  "time",
  "view",
  "with",
  "without",
  "work",
]
`;
